# pseudolang

./: .gitignore  LICENSE  README.md  implementation_guide.md  pseudo_entry.py  publishing_guide.md  pyproject.toml
.github/workflows/: release.yml
docs/: package-lock.json  package.json
docs/app/: globals.css  layout.tsx  page.tsx
docs/app/architecture/: page.tsx
docs/app/builtins/: page.tsx
docs/app/canonicals/: page.tsx
docs/app/cli/: page.tsx
docs/app/components/: CodeBlock.tsx  Sidebar.tsx
docs/app/config/: page.tsx
docs/app/custom-pmap/: page.tsx
docs/app/datastructures/: page.tsx
docs/app/examples/: page.tsx
docs/app/input/: page.tsx
docs/app/installation/: page.tsx
docs/app/placeholders/: page.tsx
docs/app/pmap/: page.tsx
docs/app/quickstart/: page.tsx
docs/app/rules/: page.tsx
docs/app/step-mode/: page.tsx
docs/app/stop-tokens/: page.tsx
docs/app/vscode-extension/: page.tsx
docs/public/: install.ps1  install.sh
install/: install.ps1
pseudo/: __init__.py  cli.py  compiler.py  install.py
pseudo/analyzer/: __init__.py  complexity.py  semantic.py
pseudo/data/: default.pmap
pseudo/interpreter/: __init__.py  builtins_ds.py  interpreter.py
pseudo/parser/: __init__.py  indent_parser.py  normalizer.py  tokenizer.py
pseudo/resolver/: __init__.py  pass1_register.py  pass2_resolver.py  pmap_loader.py
runpseudo-0.1.0/pseudo/parser/: ast_nodes.py  expr_parser.py
